# generic-lens-noinline

./: .gitignore  README.md  cabal.project  generic-lens-noinline.cabal
app/: Main.hs
