cabal-version:      2.4
name:               generic-lens-noinline
version:            0.1.0.0
synopsis:           Example to show a performance regression from generic-lens
license:            BSD-3-Clause
author:             Jaak Randmets
maintainer:         jaak.randmets@artificial.io

executable generic-lens-noinline
    main-is:          Main.hs
    build-depends:    base ^>=4.18.2.1, generic-lens, mtl, lens
    hs-source-dirs:   app
    default-language: Haskell2010
